resources/rhose/production/rhose-fleet-manager.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  labels:
    service: rhose-production-fleet-manager
  name: rhose-fleet-manager
spec:
  host: gjklh2bmbuaio30.api.openshift.com
  to:
    kind: Service
    name: rhose-fleet-manager
    weight: 100
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
